# Linear-discriminant-analysis

./: CMakeLists.txt  Linear discriminant analysis.sln  README.md  main.cpp
Data/: LDA-Data8.txt
Libs/Percepton/: CMakeLists.txt
Libs/Percepton/Inc/: Percepton.hpp
Libs/Percepton/Src/: Percepton.cpp
Libs/Percepton/Tests/: CMakeLists.txt  Percepton_tests.cpp
Linear discriminant analysis/: Linear discriminant analysis.cpp  Linear discriminant analysis.vcxproj  Linear discriminant analysis.vcxproj.filters
