find_package(Catch2 3 REQUIRED)
add_executable(Percepton_tests Percepton_tests.cpp)
target_link_libraries(Percepton_tests PRIVATE Percepton)
target_link_libraries(Percepton_tests PRIVATE Matrix)
target_link_libraries(Percepton_tests PRIVATE Matrix_tools)
target_link_libraries(Percepton_tests PRIVATE Catch2::Catch2WithMain)
include(CTest)
include(Catch)
add_test(NAME Percepton COMMAND Percepton_tests)